--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <article class="block">
           <h1 class="block-header">About Me</h1>
           <hr />
-          <img src="./assets/imgs/image (1).png" alt="" id="Jernice-image" />
+          <img src="./assets/imgs/IMG_1066.jfif/450x450" alt="" id="Jernice-image" />
           <p>Hello, I am a Software Developer.</p>
           <br />
           <p>My skills include client-side and server-side development. 
