--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,7 @@
         <!-- /.container -->
       </nav>
       <!-- End of navbar -->
+<hr style="border-color: #4aaa;"> 
 
   <!-- Start of container -->
   <main class="container">
