--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <!-- /.container -->
   </nav>
   <!-- End of navbar -->
+<hr style="border-color: #4aaa;"> 
 
   <!-- Start of container -->
   <main class="container">
@@ -53,7 +54,7 @@
         <article class="block">
           <h1 class="block-header">About Me</h1>
           <hr />
-          <img src="./assets/imgs/IMG_1066.jfif/450x450" alt="" id="Jernice-image" />
+          <img src="./assets/imgs/IMG_1066.jfif" alt="jernice" id="about-image" />
           <p>Hello, I am a Software Developer.</p>
           <br />
           <p>My skills include client-side and server-side development. 
