--- a/portfolio.html
+++ b/portfolio.html
@@ -44,6 +44,7 @@
         <!-- /.container -->
       </nav>
       <!-- End of navbar -->
+<hr style="border-color: #4aaa;"> 
 
   <!-- Start of container -->
   <div class="container">
@@ -54,23 +55,23 @@
           <hr />
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="./assets/imgs/06-Server-Side-APIs_02-Homework_Assets_06-server-side-apis-homework-demo.png/350x350" alt="Weather Dashboard">
+              <img class="img-fluid port-image" src="https://github.com/jerniceduncan/Weather-App/blob/master/assets/images/06-Server-Side-APIs_02-Homework_Assets_06-server-side-apis-homework-demo.png/350x350" alt="Weather Dashboard">
             </div>
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="./assets/imgs/codequiz.png/350x350" alt="Code Quiz">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="/assets/imgs/Jobtrackr.png/350x350" alt="Job TrackR>
-            </div>
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="./assets/imgs/Untitled_ Jun 3, 2020 9_08 PM (1).gif/350x350" alt="README.md Generator">
+              <img class="img-fluid port-image" src="https://jerniceduncan.github.io/04-Code-quiz/350x350" alt="Code Quiz">
             </div>
           </div>
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="./assets/imgs/React Google Books Search.gif" alt="React Google Books Search">
+              <img class="img-fluid port-image" src="https://calm-badlands-38225.herokuapp.com/350x350" alt="Job TrackR">
+            </div>
+            <div class="col-sm-6 col-md-12 col-lg-6">
+              <img class="img-fluid port-image" src="https://github.com/jerniceduncan/09-README-Generator/blob/master/images/Untitled_%20Jun%203%2C%202020%209_08%20PM%20(1).gif/350x350" alt="README.md Generator">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6 col-md-12 col-lg-6">
+              <img class="img-fluid port-image" src="http://google-books-react-search-21.herokuapp.com/350x350" alt="React Google Books Search">
             </div>
           </div>
         </article>
